build: open prism.paint to javafx